--- a/ClothBazar.Web/Views/Web.config
+++ b/ClothBazar.Web/Views/Web.config
@@ -18,7 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="ClothBazar.Web" />
-      </namespaces>
+		<add namespace="ClothBazar.Entities" />
+	  </namespaces>
     </pages>
   </system.web.webPages.razor>
 
